# bullbot

./: .gitignore  Ability.h  Action.h  Battle.cpp  Battle.h  BattleLogic.h  Bullbot.sln  CircularLinkedList.h  Item.h  Move.h  Party.h  Pokemon.h  README.md  TaurosBot.sln  TaurosBot.vcxproj  TaurosBot.vcxproj.filters  Type.cpp  Type.h  bullbot.sln  bullbot.vcxproj  bullbot.vcxproj.filters  main.cpp  move-data.json  out.txt  spaderbot0.txt  test.txt
Bullbot/: BasePSUser.hpp  Data.hpp  Definitions.hpp  EnvironmentData.hpp  EnvironmentSettings.hpp  MoveData.hpp  PSConnection.hpp  PSUser.hpp  PokemonData.hpp  Room.hpp  main.cpp  main_old.cpp  main_old2.cpp
Debug/: Nemesis.ilk  bullbot.ilk  vc140.idb  vc141.idb
Debug/bullbot.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  bullbot.lastbuildstate  bullbot.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
JuniorDesign/: Battle.cpp  Battle.h  Battle.hpp  BattleFunctions.hpp  CMakeLists.txt  DamageCalculator.cpp  DamageCalculator.h  DamageCalculator.hpp  JuniorDesign.sln  Main.cpp  Move.cpp  Move.h  Move.hpp  MoveFunctions.hpp  Player.cpp  Player.h  Player.hpp  PlayerFunctions.hpp  Pokemon.cpp  Pokemon.h  Pokemon.hpp  To-Do  Util.h  move-data.json  sample-team.txt  type-chart.json
JuniorDesign/JuniorDesign/: JuniorDesign.vcxproj  JuniorDesign.vcxproj.filters
JuniorDesign_CLion/: Battle.cpp  Player.cpp  Player.h
Nemesis/: test_net_1.json
Nemesis/Debug/: vc140.idb
Nemesis/Nemesis/: main.cpp
Release/: bullbot.iobj  bullbot.ipdb
Release/bullbot.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  bullbot.lastbuildstate  bullbot.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
battle/: Player.py  Pokemon.py
data/: pokemon.json  sample-team.txt  teammate-data.json
data/build-scripts/: build-move-data.py
libs/: .dir-locals.el
libs/FoxLib/: ADT.hpp  Array.hpp  Log.hpp  Macros.hpp  String.hpp  Types.hpp
libs/Nemesis/: Estimator.hpp  Math.hpp  NemesisMain.hpp  TDLearner.hpp
libs/POCO/: CppUnit.lib  PocoFoundation.lib  PocoJSON.lib  PocoJSONmt.lib  PocoNetd.lib  PocoUtild.lib  PocoXML.lib  PocoXMLmt.lib
team_prediction/: create_db.py  data.db  dbutils.py  scrape.py  team_predictor.py  team_predictor_data.py
test environment/: Battle.py  DamageCalculator.py  Pokemon.py  move-data.json  pokemon.json  temp.py
(+93 files in other folders)
